--- a/Form1.resx
+++ b/Form1.resx
@@ -121,6 +121,9 @@
     <value>16, 18</value>
   </metadata>
   <metadata name="tmrVisuUpdate.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>166, 18</value>
+    <value>225, 23</value>
+  </metadata>
+  <metadata name="tmrVisuUpdate2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>417, 15</value>
   </metadata>
 </root>
